fixed gap between user input options

--- a/src/app/grids/grids.component.css
+++ b/src/app/grids/grids.component.css
@@ -15,6 +15,11 @@
     vertical-align: middle;
   }
 
+.users-grid-input{
+    display: flex;
+    gap: 15px;
+}
+
 .grid {
     display: grid;
     gap: 1px; 
